# trapstreet-mvp

./: .gitignore  README.md  package.json  pnpm-lock.yaml
cli/: .gitignore  CLAUDE.md  PLAN.md  README.md  mkdocs.yml  pyproject.toml
cli/docs/: index.md  quickstart.md
cli/docs/guides/: cost-tracking.md  running.md  writing-solution.md  writing-task.md
cli/docs/reference/: cli.md  io-contract.md  trap-yaml.md  traptask-yaml.md  workspace.md
cli/examples/echo/solution/: trap.yaml
cli/examples/echo/task/: judge.py  pyproject.toml  traptask.yaml
cli/examples/llm-qa/solution-anthropic/: solution.py  trap.yaml
cli/examples/llm-qa/solution-claude-code/: solution.py  trap.yaml
cli/examples/llm-qa/solution-mistral/: solution.py  trap.yaml
cli/examples/llm-qa/solution-multi/: solution.py  trap.yaml
cli/examples/llm-qa/solution-openai/: solution.py  trap.yaml
cli/examples/llm-qa/task/: grader.py  judge.py  pyproject.toml  traptask.yaml
cli/examples/word-count/solution/: trap.yaml  word_count.py
cli/examples/word-count/task/: grader.py  judge.py  pyproject.toml  traptask.yaml
cli/examples/word-count/task-run/: traptask.yaml
cli/src/trap/: __init__.py  cli.py  loader.py
cli/src/trap/auth/: __init__.py  oauth.py  submit_client.py
cli/src/trap/cli/: __init__.py
cli/src/trap/cost/: calculator.py  providers.py  proxy.py
cli/src/trap/models/: __init__.py  config.py  report.py  results.py  task.py
cli/src/trap/report/: __init__.py  progress.py  rich.py  saver.py
cli/src/trap/runner/: __init__.py  case.py  grader.py  judge.py  task.py
(+65 files in other folders)
