[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "trap"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "loguru>=0.7",
]

[project.scripts]
tp = "trap.cli:app"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/trap/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/trap"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.9",
]

[tool.uv.workspace]
exclude = ["examples/*"]

[tool.ruff]
line-length = 110
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/trap/_version.py" = ["RUF022"]
"src/trap/cli.py" = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
